--- a/vision-app-dev/Base.lproj/Main.storyboard
+++ b/vision-app-dev/Base.lproj/Main.storyboard
@@ -26,74 +26,70 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rPB-iM-qlh">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ue0-sJ-Faq" customClass="RoundedShadowView" customModule="vision_app_dev" customModuleProvider="target">
-                                        <rect key="frame" x="20" y="30" width="335" height="60"/>
-                                        <subviews>
-                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="edd-9r-FW9">
-                                                <rect key="frame" x="8" y="8" width="319" height="44"/>
-                                                <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="The name of the item appear here." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="i9h-yp-f0K">
-                                                        <rect key="frame" x="0.0" y="0.0" width="319" height="25"/>
-                                                        <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="18"/>
-                                                        <color key="textColor" red="0.84705882349999995" green="0.2784313725" blue="0.1176470588" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                        <nil key="highlightedColor"/>
-                                                    </label>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="CONFIDENCE :" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5La-ui-rjX">
-                                                        <rect key="frame" x="0.0" y="26" width="319" height="18"/>
-                                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="10"/>
-                                                        <nil key="textColor"/>
-                                                        <nil key="highlightedColor"/>
-                                                    </label>
-                                                </subviews>
-                                            </stackView>
-                                        </subviews>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <constraints>
-                                            <constraint firstItem="edd-9r-FW9" firstAttribute="leading" secondItem="ue0-sJ-Faq" secondAttribute="leading" constant="8" id="1Qb-V4-Zzb"/>
-                                            <constraint firstItem="edd-9r-FW9" firstAttribute="top" secondItem="ue0-sJ-Faq" secondAttribute="top" constant="8" id="WrB-qw-dCk"/>
-                                            <constraint firstAttribute="height" constant="60" id="Ybr-JT-8MA"/>
-                                            <constraint firstAttribute="bottom" secondItem="edd-9r-FW9" secondAttribute="bottom" constant="8" id="ZKZ-re-R6b"/>
-                                            <constraint firstAttribute="trailing" secondItem="edd-9r-FW9" secondAttribute="trailing" constant="8" id="deG-Hv-aZQ"/>
-                                        </constraints>
-                                    </view>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3fi-g6-zhc" customClass="RoundedShadowButton" customModule="vision_app_dev" customModuleProvider="target">
-                                        <rect key="frame" x="20" y="615" width="85" height="32"/>
-                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="85" id="AiM-Db-4CR"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="14"/>
-                                        <state key="normal" title="FLASH OFF">
-                                            <color key="titleColor" red="0.84705882352941175" green="0.27843137254901962" blue="0.11764705882352941" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        </state>
-                                    </button>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gyx-Pe-bag" customClass="RoundedShadowImageView" customModule="vision_app_dev" customModuleProvider="target">
-                                        <rect key="frame" x="285" y="522" width="70" height="125"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="125" id="69H-y7-73E"/>
-                                            <constraint firstAttribute="width" constant="70" id="MAN-mr-eID"/>
-                                        </constraints>
-                                    </imageView>
-                                </subviews>
                                 <color key="backgroundColor" red="0.56078431370000004" green="0.81176470590000005" blue="0.30588235289999999" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ue0-sJ-Faq" customClass="RoundedShadowView" customModule="vision_app_dev" customModuleProvider="target">
+                                <rect key="frame" x="20" y="30" width="335" height="60"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="edd-9r-FW9">
+                                        <rect key="frame" x="10" y="10" width="315" height="40"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="The name of the item appear here." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="i9h-yp-f0K">
+                                                <rect key="frame" x="0.0" y="0.0" width="315" height="25"/>
+                                                <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="18"/>
+                                                <color key="textColor" red="0.84705882349999995" green="0.2784313725" blue="0.1176470588" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="CONFIDENCE :" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5La-ui-rjX">
+                                                <rect key="frame" x="0.0" y="26" width="315" height="14"/>
+                                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="10"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="ue0-sJ-Faq" secondAttribute="trailing" constant="20" id="BmV-ju-0eb"/>
-                                    <constraint firstItem="ue0-sJ-Faq" firstAttribute="top" secondItem="rPB-iM-qlh" secondAttribute="top" constant="30" id="LoE-DA-hNP"/>
-                                    <constraint firstItem="ue0-sJ-Faq" firstAttribute="leading" secondItem="rPB-iM-qlh" secondAttribute="leading" constant="20" id="VWp-75-zN9"/>
-                                    <constraint firstItem="3fi-g6-zhc" firstAttribute="leading" secondItem="rPB-iM-qlh" secondAttribute="leading" constant="20" id="c6r-d5-kpa"/>
-                                    <constraint firstAttribute="bottom" secondItem="3fi-g6-zhc" secondAttribute="bottom" constant="20" id="ecY-UY-gxc"/>
-                                    <constraint firstAttribute="bottom" secondItem="gyx-Pe-bag" secondAttribute="bottom" constant="20" id="fzS-Mv-2fb"/>
-                                    <constraint firstAttribute="trailing" secondItem="gyx-Pe-bag" secondAttribute="trailing" constant="20" id="lrT-dg-a0d"/>
+                                    <constraint firstAttribute="bottom" secondItem="edd-9r-FW9" secondAttribute="bottom" constant="10" id="IEY-tm-QiB"/>
+                                    <constraint firstAttribute="trailing" secondItem="edd-9r-FW9" secondAttribute="trailing" constant="10" id="Lar-Mg-WPv"/>
+                                    <constraint firstAttribute="height" constant="60" id="Ybr-JT-8MA"/>
+                                    <constraint firstItem="edd-9r-FW9" firstAttribute="leading" secondItem="ue0-sJ-Faq" secondAttribute="leading" constant="10" id="goZ-CM-cbV"/>
+                                    <constraint firstItem="edd-9r-FW9" firstAttribute="top" secondItem="ue0-sJ-Faq" secondAttribute="top" constant="10" id="lNA-TJ-XIJ"/>
                                 </constraints>
                             </view>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gyx-Pe-bag" customClass="RoundedShadowImageView" customModule="vision_app_dev" customModuleProvider="target">
+                                <rect key="frame" x="275" y="532" width="80" height="125"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="80" id="VuS-Mt-eot"/>
+                                    <constraint firstAttribute="height" constant="125" id="yjG-in-2CN"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3fi-g6-zhc" customClass="RoundedShadowButton" customModule="vision_app_dev" customModuleProvider="target">
+                                <rect key="frame" x="20" y="615" width="85" height="32"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="85" id="mWr-aQ-Ns0"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="14"/>
+                                <state key="normal" title="FLASH OFF">
+                                    <color key="titleColor" red="0.84705882352941175" green="0.27843137254901962" blue="0.11764705882352941" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="rPB-iM-qlh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="1v5-JN-ppL"/>
+                            <constraint firstItem="ue0-sJ-Faq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="QxZ-0H-HeC"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="rPB-iM-qlh" secondAttribute="bottom" id="YG8-z7-wdg"/>
+                            <constraint firstItem="3fi-g6-zhc" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="c5Q-Cm-qyf"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="3fi-g6-zhc" secondAttribute="bottom" constant="20" id="hpZ-hz-lgV"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ue0-sJ-Faq" secondAttribute="trailing" constant="20" id="mUx-eS-0iU"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="gyx-Pe-bag" secondAttribute="trailing" constant="20" id="nB9-Fj-b5k"/>
+                            <constraint firstItem="ue0-sJ-Faq" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="30" id="wYF-y7-tti"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="rPB-iM-qlh" secondAttribute="trailing" id="x7M-cl-6DJ"/>
                             <constraint firstItem="rPB-iM-qlh" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="xfj-ay-sne"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="gyx-Pe-bag" secondAttribute="bottom" constant="10" id="zGY-rl-FVW"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
